--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.3",
+    "css-loader": "^1.0.0",
     "express": "^4.16.3",
     "mongoose": "^5.2.13",
     "nodemon": "^1.18.4",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
+    "style-loader": "^0.23.0",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0"
   },
