--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "css-loader": "^1.0.0",
     "express": "^4.16.3",
     "mongoose": "^5.2.13",
+    "mongoose-simple-random": "^0.4.1",
     "nodemon": "^1.18.4",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
