--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^1.18.4",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
+    "react-modal": "^3.5.1",
     "style-loader": "^0.23.0",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0"
