--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./server/index.js",
+    "start": "node ./server/index.js",
     "build": "webpack -w"
   },
   "repository": {
