--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "css-loader": "^1.0.0",
     "express": "^4.16.3",
     "mongoose": "^5.2.13",
@@ -25,7 +26,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./server/index.js",
+    "start": "nodemon ./server/index.js",
     "build": "webpack -w"
   },
   "repository": {
