--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 *.log
 .DS_Store
 node_modules
+package-lock.json
 
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+
+# 10 million entry data files
+/database/data/*.json
+/database/data/*.csv
