--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "cors": "^2.8.4",
     "css-loader": "^1.0.0",
     "express": "^4.16.3",
+    "faker": "^4.1.0",
     "mongoose": "^5.2.13",
     "mongoose-simple-random": "^0.4.1",
     "nodemon": "^1.18.4",
+    "pg": "^7.4.3",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-modal": "^3.5.1",
+    "sequelize": "^4.39.0",
     "style-loader": "^0.23.0",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0"
