--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ package-lock.json
 # 10 million entry data files
 /database/data/*.json
 /database/data/*.csv
+
+# New Relic
+newrelic.js
+newrelic_agent.log
