--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "faker": "^4.1.0",
     "mongoose": "^5.2.13",
     "mongoose-simple-random": "^0.4.1",
+    "newrelic": "^4.9.0",
     "nodemon": "^1.18.4",
     "pg": "^7.4.3",
     "react": "^16.5.0",
